--- a/qdrpl_calcs.ipynb
+++ b/qdrpl_calcs.ipynb
@@ -7,7 +7,9 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "G = 6.67430e-11\n",
+    "c = 299792458"
    ]
   },
   {
@@ -30,7 +32,7 @@
    "source": [
     "m1 = 1\n",
     "m2 = 2\n",
-    "positions = [[5, 6], [1, 2]] # 2 masses in this case\n",
+    "positions = [[5, 6], [1, 2]]\n",
     "masses = [m1, m2]\n",
     "\n",
     "def quadrupole_moment(masses, positions):\n",
@@ -266,7 +268,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Derivatives of quadrupole mooments (to find GW radiation)\n",
+    "# use dQ/dt = Q(t+dt) - Q(t-dt) / dt as computational approximation of 1st derivative\n",
+    "# use d^2Q/dt^2 = Q(t+dt) - 2Q(t) + Q(t-dt) / dt^2 as computational approximation of 2nd derivative\n",
+    "\n",
+    "Q_values = qdrpl_trajectory(masses, trajectories)\n",
+    "\n",
+    "def "
+   ]
   }
  ],
  "metadata": {
