--- a/qdrpl_calcs.ipynb
+++ b/qdrpl_calcs.ipynb
@@ -265,18 +265,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Derivatives of quadrupole mooments (to find GW radiation)\n",
-    "# use dQ/dt = Q(t+dt) - Q(t-dt) / dt as computational approximation of 1st derivative\n",
-    "# use d^2Q/dt^2 = Q(t+dt) - 2Q(t) + Q(t-dt) / dt^2 as computational approximation of 2nd derivative\n",
+    "# Compute strain tensor, defined as h_ij = 2G/c^4r d^2I/dt^2 evaluated at t-r/c \n",
     "\n",
-    "Q_values = qdrpl_trajectory(masses, trajectories)\n",
+    "def compute_strain(masses, trajectories, dist_r, dt):\n",
+    "    strain_tensors = []\n",
+    "    \n",
+    "    # Compute quadrupole moments over the trajectory\n",
+    "    Q_values = [quadrupole_moment(masses, pos) for pos in trajectories]\n",
+    "    \n",
+    "    # Compute second time derivatives of the quadrupole moments\n",
+    "    # use d^2Q/dt^2 = Q(t+dt) - 2Q(t) + Q(t-dt) / dt^2 as computational approximation of 2nd derivative\n",
+    "    Q_values = np.array(Q_values)\n",
+    "    d2Q_dt2 = (Q_values[2:] - 2 * Q_values[1:-1] + Q_values[:-2]) / (dt ** 2)\n",
     "\n",
-    "def "
+    "    # Calculate strain tensor for each step dt\n",
+    "    for Q in d2Q_dt2:\n",
+    "        h_ij = (2*G / (c**4 * dist_r)) * Q  # Strain tensor calculation\n",
+    "        strain_tensors.append(h_ij)\n",
+    "\n",
+    "    return strain_tensors"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
