--- a/test_functions.ipynb
+++ b/test_functions.ipynb
@@ -332,10 +332,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'fromACC'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_23180/305723373.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mfromACC\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mMassPoint\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"binary_orbit_data.csv\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'fromACC'"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from fromACC import MassPoint \n",
+    "\n",
+    "df = pd.read_csv(\"binary_orbit_data.csv\")\n",
+    "\n",
+    "trajectory = []\n",
+    "\n",
+    "for _, row in df.iterrows():\n",
+    "    # Create MassPoint objects for each mass\n",
+    "    mass1_point = MassPoint(mass=row['Mass1'], x=row['Mass1_x'], y=row['Mass1_y'])\n",
+    "    mass2_point = MassPoint(mass=row['Mass2'], x=row['Mass2_x'], y=row['Mass2_y'])\n",
+    "    \n",
+    "    # Append MassPoint positions to trajectory []\n",
+    "    trajectory.append([mass1_point, mass2_point])\n"
+   ]
   }
  ],
  "metadata": {
