--- a/test_functions.ipynb
+++ b/test_functions.ipynb
@@ -4,12 +4,25 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'velocity' from 'scripts' (c:\\ProgramData\\Anaconda3\\lib\\site-packages\\scripts\\__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_23576/1386920377.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mscripts\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mvelocity\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvelocity_split\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0macceleration\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mquadrupole_moment\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mqdrpl_trajectory\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mfromACC\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mMassPoint\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'velocity' from 'scripts' (c:\\ProgramData\\Anaconda3\\lib\\site-packages\\scripts\\__init__.py)"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "from scripts import velocity, velocity_split, acceleration, quadrupole_moment, qdrpl_trajectory"
+    "from scripts import velocity, velocity_split, acceleration, quadrupole_moment, qdrpl_trajectory\n",
+    "from fromACC import MassPoint"
    ]
   },
   {
@@ -348,9 +361,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "from fromACC import MassPoint \n",
-    "\n",
     "df = pd.read_csv(\"binary_orbit_data.csv\")\n",
     "\n",
     "trajectory = []\n",
